--- a/css/interview.css
+++ b/css/interview.css
@@ -85,6 +85,7 @@
   color: #2E2E2E;
   border-bottom: 2px solid #E7E7E7;
   margin-bottom: 7.85%;
+  padding-bottom: 17px;
 }
 
 @media (min-width:680px) {
