--- a/css/contact.css
+++ b/css/contact.css
@@ -403,17 +403,12 @@
 
 .check_privacy_content p, .check_privacy_content li {
   text-align: left;
-  /* font: normal normal normal 14px/28px Noto Sans CJK JP, sans-serif;
-  letter-spacing: 0.7px;
-  color: #2E2E2E; */
   list-style: decimal;
 }
 
 .check_privacy_content ul li {
   list-style: disc;
 }
-
-/* .check_privacy_content {} */
 
 .check_privacy_content ol, .check_privacy_content ul {
   padding-left: 20px;
@@ -511,6 +506,53 @@
     font-size: 24px;
     margin-bottom: 95px;
   }
+}
+
+
+/* ラジオボタンの色変更 */
+input[type=radio] {
+  display: none;
+}
+.mwform-radio-field-text {
+  box-sizing: border-box;
+  cursor: pointer;
+  display: inline-block;
+  padding: 0px 30px;
+  position: relative;
+  width: auto;
+}
+.mwform-radio-field-text::before {
+  background: #fff;
+  border: 1px solid #183c30;
+  border-radius: 50%;
+  content: '';
+  display: block;
+  height: 16px;
+  left: 5px;
+  margin-top: -8px;
+  position: absolute;
+  top: 50%;
+  width: 16px;
+}
+.mwform-radio-field-text::after {
+  background: #DAD6D6;
+  border-radius: 50%;
+  content: '';
+  display: block;
+  height: 10px;
+  left: 8px;
+  margin-top: -5px;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  width: 10px;
+}
+input[type=radio]:checked + .mwform-radio-field-text::after {
+  opacity: 1;
+}
+input[type="radio"],input[type="checkbox"]{
+position: relative;
+top: 2px;
 }
 
 /*------------------------------------ 確認ページ --------------------------------------*/
