--- a/css/index.css
+++ b/css/index.css
@@ -227,7 +227,7 @@ nav.globalMenuSp.active {
   display: none;
 }
 
-@media (min-width:770px) {
+@media (min-width:680px) {
   .main {
     display: block;
     position: relative;
@@ -281,7 +281,7 @@ nav.globalMenuSp.active {
   }
 }
 
-@media (min-width:770px) {
+@media (min-width:680px) {
   .main h1 {
     top: 143px;
     font-size: 24px;
@@ -345,6 +345,10 @@ nav.globalMenuSp.active {
   z-index: 10;
 }
 
+.top_white_back_mobile {
+  width: 89%;
+}
+
 .top_white_universe_mobile {
   animation: anime1_mobile 2s ease 0s infinite normal;
   width: 89%;
@@ -360,7 +364,7 @@ nav.globalMenuSp.active {
   }
 }
 
-@media (min-width:770px) {
+@media (min-width:680px) {
   .top_white {
     top: 242.2px;
     width: 686px;
@@ -401,7 +405,7 @@ nav.globalMenuSp.active {
   height: 104.8px;
 }
 
-@media (min-width:770px) {
+@media (min-width:680px) {
   .top_white_back {
     top: 39px;
     width: 552.3px;
@@ -430,9 +434,9 @@ nav.globalMenuSp.active {
   box-shadow: 0px 10px 20px #0000001A;
 }
 
-@media (min-width:770px) {
+@media (min-width:680px) {
   .top_white_universe {
-    top: 39px;
+    top: 35px;
     width: 552.3px;
     height: 239.8px;
   }
@@ -476,7 +480,7 @@ nav.globalMenuSp.active {
   width: 150px;
 }
 
-@media (min-width:770px) {
+@media (min-width:680px) {
   .top_white_logo {
     top: 25.2px;
     margin: auto;
@@ -533,7 +537,7 @@ nav.globalMenuSp.active {
   box-shadow: 0px 10px 20px #0000001A;
 }
 
-@media (min-width:770px) {
+@media (min-width:680px) {
   .top_white a {
     top: 192.5px;
     width: 69.3px;
