--- a/css/service.css
+++ b/css/service.css
@@ -251,6 +251,69 @@
   }
 }
 
+
+.service_modal-panel-back {
+  position: fixed;
+  width: 100%;
+  height: 100%;  
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(200,200,200,.5);
+}
+
+.service_modal-panel-back.disable {
+  display: none;
+}
+
+.service_modal_panel {
+  width: 80%;
+  max-width: 981px;
+  height: 600px;
+  background-color: white;
+  padding: 30px;
+  margin: 100px auto;
+  text-align: center;
+}
+
+.service_modal_slider_main {
+  width: 302px;
+  margin: 0 45px 0 45px;
+}
+
+.service_modal_slider_main img {
+  width: 100%;
+}
+.slick-center img{
+  width: 300px;
+  position: absolute;
+  right: 0;
+  left: 0;
+  /* top: 0;
+  bottom: 0; */
+  margin: auto;
+}
+.service_modal_text {
+  font-family: "Noto Sans CJK JP", sans-serif;
+  font-size: 16px;
+  margin: 58px auto 0;
+  color: #2E2E2E;
+  text-align: left;
+}
+
+.service_modal_close {
+  display: inline-block;
+  color: #fff;
+  background-color: #3D3D3D;
+  padding: 5px 20px 5px 20px;
+  box-shadow: 0 0 8px #707070;
+  font-family: "Noto Sans CJK JP", sans-serif;
+  font-size: 16px;
+  margin: 61px auto 51px;
+  text-align: center;
+}
+
 .service_plan_flex02 {
   display: block;
   width: 95%;
