--- a/css/index.css
+++ b/css/index.css
@@ -1106,7 +1106,7 @@ nav.globalMenuSp.active {
 }
 
 .flow_icon_number {
-  font: normal normal normal 30px Ten Mincho, serif;
+  font: normal normal normal 30px "toppan-bunkyu-mincho-pr6n", serif;
   letter-spacing: 1.5px;
   color: #FF9494;
   margin-left: 40px;
