--- a/css/interview.css
+++ b/css/interview.css
@@ -173,7 +173,7 @@
 
 .interview_01_cont_title_num {
   color: #FF9494;
-  font-family: "Ten Mincho", sans-serif;
+  font-family: "toppan-bunkyu-mincho-pr6n", serif;
   font-size: 20px;
   margin-right: 5px;
   line-height: 45px;
