--- a/css/archive_case_study.css
+++ b/css/archive_case_study.css
@@ -1,5 +1,31 @@
 /*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 管理事例 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
 
+.case_button_area {
+  width: 980px;
+  margin: 98px auto 73px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.case_cat_button {
+  width: 176px;
+  height: 62px;
+  background: #3d3d3d;
+  opacity: 0.9;
+  font-family: "Noto Sans CJK JP", sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  letter-spacing: 0.1em;
+  text-align: center;
+  color: #fff;
+}
+
+.case_cat_button.active {
+  background: #e9e9e9;
+  border: 2px solid #a5a5a5;
+  color: #505050;
+}
+
 .case_content {
   width: 980px;
   border: 1px solid #a5a5a5;
@@ -112,5 +138,6 @@
   text-align: center;
 }
 
-
-
+.case_hr {
+  margin-top: 94px;
+}
