--- a/css/archive_case_study.css
+++ b/css/archive_case_study.css
@@ -1,23 +1,72 @@
 /*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ 管理事例 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
 
 .case_button_area {
-  width: 980px;
-  margin: 98px auto 73px;
-  display: flex;
-  justify-content: space-between;
+  width: 80%;
+  margin: 60px auto 40px;
+  display: block;
+  justify-content: center;
+}
+
+@media (min-width:680px) {
+  .case_button_area {
+    width: 675px;
+    margin: 98px auto 73px;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width:795px) {
+  .case_button_area {
+    width: 785px;
+    margin: 98px auto 73px;
+  }
+}
+
+@media (min-width:1000px) {
+  .case_button_area {
+    width: 980px;
+    max-width: 981px;
+  }
 }
 
 .case_cat_button {
-  width: 176px;
-  height: 62px;
+  width: 250px;
+  height: 43px;
   background: #3d3d3d;
   opacity: 0.9;
   font-family: "Noto Sans CJK JP", sans-serif;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 15px;
   letter-spacing: 0.1em;
   text-align: center;
   color: #fff;
+  margin: 0 auto 25px;
+  display: block;
+}
+
+@media (min-width:680px) {
+  .case_cat_button {
+    width: 125px;
+    height: 43px;
+    font-size: 13px;
+  }
+}
+
+@media (min-width:795px) {
+  .case_cat_button {
+    width: 141px;
+    height: 50px;
+    font-size: 15px;
+  }
+}
+
+@media (min-width:1000px) {
+  .case_cat_button {
+    width: 176px;
+    height: 62px;
+    font-size: 16px;
+  }
 }
 
 .case_cat_button.active {
@@ -27,24 +76,52 @@
 }
 
 .case_content {
-  width: 980px;
+  width: 95%;
   border: 1px solid #a5a5a5;
-  margin: 0 auto 71px;
+  margin: 0 auto 50px;
+}
+
+@media (min-width:680px) {
+  .case_content {
+    width: 675px;
+    border: 1px solid #a5a5a5;
+    margin: 0 auto 60px;
+  }
+}
+
+@media (min-width:795px) {
+  .case_content {
+    width: 785px;
+    margin: 0 auto 71px;
+  }
+}
+
+@media (min-width:1000px) {
+  .case_content {
+    width: 980px;
+  }
 }
 
 .case_category {
-  height: 62px;
+  height: 42px;
   background: #e7e7e7;
   opacity: 0.9;
   font-family: "Noto Sans CJK JP", sans-serif;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 36px;
   text-align: left;
   color: #f55;
   display: flex;
   align-items: center;
   padding-left: 20px;
+}
+
+@media (min-width:680px) {
+  .case_category {
+    height: 62px;
+    font-size: 18px;
+  }
 }
 
 .case_frame {
@@ -54,27 +131,93 @@
 }
 
 .case_content_top {
-  display: flex;
+  display: block;
   justify-content: space-between;
   margin-bottom: 44px;
 }
 
+@media (min-width:680px) {
+  .case_content_top {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 44px;
+  }
+}
+
 .case_content_top figure {
-  width: 425px;
+  width: 300px;
+  margin: auto;
+}
+
+@media (min-width:680px) {
+  .case_content_top figure {
+    width: 290px;
+    margin: 0;
+  }
+}
+
+@media (min-width:795px) {
+  .case_content_top figure {
+    width: 340px;
+  }
+}
+
+@media (min-width:1000px) {
+  .case_content_top figure {
+    width: 425px;
+  }
+}
+
+.case_content_top img {
+  width: 100%;
+  height: auto;
 }
 
 .case_content_title_area {
-  width: 465px;
+  width: 300px;
+  margin: auto;
+}
+
+@media (min-width:680px) {
+  .case_content_title_area {
+    width: 316px;
+  }
+}
+
+@media (min-width:795px) {
+  .case_content_title_area {
+    width: 372px;
+  }
+}
+
+@media (min-width:1000px) {
+  .case_content_title_area {
+    width: 465px;
+  }
 }
 
 .case_content_title {
   color: #2e2e2e;
   margin-bottom: 22px;
   font-family: "Noto Sans CJK JP", sans-serif;
-  font-size: 28px;
-  line-height: 50px;
+  font-size: 20px;
+  line-height: 34px;
   text-align: left;
   font-weight: bold;
+}
+
+@media (min-width:795px) {
+  .case_content_title {
+    font-size: 23px;
+    line-height: 40px;
+  }
+}
+
+@media (min-width:1000px) {
+  .case_content_title {
+    font-size: 28px;
+    line-height: 50px;
+  }
 }
 
 .case_property {
@@ -83,34 +226,64 @@
 }
 
 .case_property_title {
-  margin-right: 22px;
+  margin-right: 20px;
   font-family: "Noto Sans CJK JP", sans-serif;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 16px;
   text-align: left;
   color: #2e2e2e;
 }
 
+@media (min-width:680px) {
+  .case_property_title {
+    margin-right: 22px;
+    font-size: 18px;
+  }
+}
+
 .case_property p {
-  font-size: 16px;
-  margin-bottom: 10px;
+  font-size: 14px;
+  margin-bottom: 7px;
   color: #2e2e2e;
   font-family: "Noto Sans CJK JP", sans-serif;
   font-weight: 500;
   text-align: left;
 }
 
+@media (min-width:680px) {
+  .case_property p {
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+}
+
 .case_frame h4 {
   font-family: "Noto Sans CJK JP", sans-serif;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 15px;
   line-height: 36px;
   text-align: left;
   color: #2e2e2e;
 }
 
+@media (min-width:680px) {
+  .case_frame h4 {
+    font-size: 18px;
+  }
+}
+
 .case_status {
   margin-bottom: 34px;
+}
+
+.case_status p, .case_suggest_result p {
+font-size: 14px;
+}
+
+@media (min-width:680px) {
+  .case_status p, .case_suggest_result p {
+    font-size: 16px;
+    }
 }
 
 .case_status h4 {
