--- a/css/archive_case_study.css
+++ b/css/archive_case_study.css
@@ -125,9 +125,15 @@
 }
 
 .case_frame {
-  width: 95%;
+  width: 90%;
   padding: 55px 0 63px;
   margin: auto;
+}
+
+@media (min-width:680px) {
+  .case_frame {
+    width: 95%;
+  }
 }
 
 .case_content_top {
@@ -277,13 +283,13 @@
 }
 
 .case_status p, .case_suggest_result p {
-font-size: 14px;
+  font-size: 14px;
 }
 
 @media (min-width:680px) {
   .case_status p, .case_suggest_result p {
     font-size: 16px;
-    }
+  }
 }
 
 .case_status h4 {
