--- a/css/index.css
+++ b/css/index.css
@@ -275,9 +275,7 @@ nav.globalMenuSp.active {
 
 @media (min-width:500px) {
   .main h1 {
-    
     font-size: 18px;
-    
   }
 }
 
@@ -563,13 +561,14 @@ nav.globalMenuSp.active {
 .service_modal-panel-back {
   position: fixed;
   width: 100%;
-  height: 100%;  
+  height: 100%;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(200,200,200,.5);
+  background-color: rgba(200, 200, 200, .5);
   z-index: 99;
+  overflow: scroll;
 }
 
 .service_modal-panel-back.disable {
@@ -579,11 +578,19 @@ nav.globalMenuSp.active {
 .top_modal_panel {
   width: 80%;
   max-width: 981px;
-  height: 752px;
   background-color: white;
-  padding: 30px;
-  margin: 100px auto;
+  padding: 20px;
+  margin: 60px auto;
   text-align: center;
+  position: relative;
+}
+
+@media (min-width:730px) {
+  .top_modal_panel {
+    height: 752px;
+    padding: 30px;
+    margin: 100px auto;
+  }
 }
 
 .service_modal_close {
@@ -601,18 +608,59 @@ nav.globalMenuSp.active {
 .top_modal_title {
   font-family: "Noto Sans CJK JP", sans-serif;
   font-weight: bold;
-  font-size: 28px;
+  font-size: 22px;
   color: #FF2222;
   text-align: center;
   margin: 0 auto;
 }
 
+@media (min-width:730px) {
+  .top_modal_title {
+    font-size: 28px;
+  }
+}
+
 .top_modal_subtitle {
   font-family: "Noto Sans CJK JP", sans-serif;
-  font-size: 22px;
+  font-size: 16px;
   font-weight: normal;
-  margin: 19px auto 70px;
+  margin: 15px auto 40px;
   text-align: center;
+}
+
+@media (min-width:730px) {
+  .top_modal_subtitle {
+    font-size: 22px;
+    font-weight: normal;
+    margin: 19px auto 70px;
+  }
+}
+
+.square_btn {
+  display: block;
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  top: 20px;
+  right: 20px;
+}
+ 
+.square_btn::before, .square_btn::after {
+  content: "";
+  position: absolute;
+  top: 10%;
+  right: 20%;
+  width: 3px; /* 棒の幅（太さ） */
+  height: 27px; /* 棒の高さ */
+  background: #333; /* バツ印の色 */
+}
+ 
+.square_btn::before {
+  transform: translate(-50%,-50%) rotate(45deg);
+}
+ 
+.square_btn::after {
+  transform: translate(-50%,-50%) rotate(-45deg);
 }
 
 .top_modal_toppage_box {
@@ -621,83 +669,172 @@ nav.globalMenuSp.active {
 }
 
 .top_modal_toppage_box_list01 {
-  display: flex;
-  width: 806px;
-  height: 278px;
-  padding-left: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  justify-content: space-between;
-  margin-bottom: 6px;
+  display: block;
+  width: 90%;
   text-align: center;
+  margin: 0 auto;
 }
 
-.top_modal_toppage_box_list01 li {
-  width: 241px;
-  
+@media (min-width:730px) {
+  .top_modal_toppage_box_list01 {
+    display: flex;
+    width: 90%;
+    height: 278px;
+    padding-left: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    justify-content: space-between;
+    margin-bottom: 6px;
+    text-align: center;
+  }
 }
 
-.top_modal_toppage_box_list01 img {
+@media (min-width:1100px) {
+  .top_modal_toppage_box_list01 {
+    width: 806px;
+  }
+}
+
+.top_modal_toppage_box_list01 li, .top_modal_toppage_box_list01 img {
   width: 241px;
+  margin: 0 auto 20px;
+}
+
+@media (min-width:730px) {
+  .top_modal_toppage_box_list01 li, .top_modal_toppage_box_list01 img {
+    width: 154px;
+    margin: 0;
+  }
+}
+
+@media (min-width:900px) {
+  .top_modal_toppage_box_list01 li, .top_modal_toppage_box_list01 img {
+    width: 193px;
+  }
+}
+
+@media (min-width:1100px) {
+  .top_modal_toppage_box_list01 li, .top_modal_toppage_box_list01 img {
+    width: 241px;
+  }
 }
 
 .top_modal_toppage_box_list02 {
-  display: flex;
-  width: 530px;
-  height: 258px;
-  padding-left: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  justify-content: space-between;
-  margin-bottom: 6px;
+  display: block;
+  width: 90%;
   text-align: center;
+  margin: 0 auto;
 }
 
-.top_modal_toppage_box_list02 li {
-  width: 241px;
-  
+@media (min-width:730px) {
+  .top_modal_toppage_box_list02 {
+    display: flex;
+    width: 65%;
+    height: 258px;
+    padding-left: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    justify-content: space-between;
+    margin-bottom: 6px;
+  }
 }
 
-.top_modal_toppage_box_list02 img {
+@media (min-width:1100px) {
+  .top_modal_toppage_box_list02 {
+    width: 530px;
+  }
+}
+
+.top_modal_toppage_box_list02 li, .top_modal_toppage_box_list02 img {
   width: 241px;
+  margin: 0 auto;
+}
+
+@media (min-width:730px) {
+  .top_modal_toppage_box_list02 li, .top_modal_toppage_box_list02 img {
+    width: 154px;
+    margin: 0;
+  }
+}
+
+@media (min-width:900px) {
+  .top_modal_toppage_box_list02 li, .top_modal_toppage_box_list02 img {
+    width: 193px;
+  }
+}
+
+@media (min-width:1100px) {
+  .top_modal_toppage_box_list02 li, .top_modal_toppage_box_list02 img {
+    width: 241px;
+  }
 }
 
 .top_modal_toppage_box_list01_text {
   font-family: "Noto Sans CJK JP", sans-serif;
-  font-size: 17px;
+  font-size: 14px;
   font-weight: bold;
-  text-align: left;
+  text-align: center;
   color: #2E2E2E;
-  margin: 27px auto 0;
+  margin: 0 auto;
   letter-spacing: 1.7px;
 }
 
+@media (min-width:730px) {
+  .top_modal_toppage_box_list01_text {
+    margin: 27px auto 0;
+    text-align: left;
+  }
+}
+
+@media (min-width:900px) {
+  .top_modal_toppage_box_list01_text {
+    font-family: "Noto Sans CJK JP", sans-serif;
+    font-size: 17px;
+  }
+}
+
+.top_modal_toppage_box_list01_text br {
+  display: none;
+}
+
+@media (min-width:1100px) {
+  .top_modal_toppage_box_list01_text br {
+    display: block;
+  }
+}
+
 .top_modal_toppage_box_list01_num {
-  /* position: absolute;
-  top: -40px; */
   font-family: "toppan-bunkyu-mincho-pr6n", serif;
-  font-size: 31px;
+  font-size: 25px;
   color: #FF9494;
   letter-spacing: 1.55px;
   text-align: left;
-  margin-bottom: -13px;
+  margin-bottom: -10px;
+}
+
+@media (min-width:900px) {
+  .top_modal_toppage_box_list01_num {
+    font-family: "toppan-bunkyu-mincho-pr6n", serif;
+    font-size: 31px;
+    margin-bottom: -13px;
+  }
 }
 
 .fadein01 {
   animation: slide-skew01 0.6s cubic-bezier(0.25, 1, 0.5, 1) 1 forwards;
 }
- 
+
 @keyframes slide-skew01 {
   0% {
-    transform: translate(980px,30px);
+    transform: translate(980px, 30px);
     opacity: 0;
   }
   100% {
-    transform: translate(0,0);
+    transform: translate(0, 0);
   }
-  20%,100% {
+  20%, 100% {
     opacity: 1;
   }
 }
@@ -705,16 +842,16 @@ nav.globalMenuSp.active {
 .fadein02 {
   animation: slide-skew02 0.6s cubic-bezier(0.25, 1, 0.5, 1) 1 forwards;
 }
- 
+
 @keyframes slide-skew02 {
   0% {
-    transform: translate(980px,-500px);
+    transform: translate(980px, -500px);
     opacity: 0;
   }
   100% {
-    transform: translate(0,0);
+    transform: translate(0, 0);
   }
-  20%,100% {
+  20%, 100% {
     opacity: 1;
   }
 }
@@ -722,19 +859,54 @@ nav.globalMenuSp.active {
 .fadein03 {
   animation: slide-skew03 0.9s cubic-bezier(0.25, 1, 0.5, 1) 1 forwards;
 }
- 
+
 @keyframes slide-skew03 {
   0% {
-    transform: translate(-980px,-100px);
+    transform: translate(-980px, -100px);
     opacity: 0;
   }
   100% {
-    transform: translate(0,0);
+    transform: translate(0, 0);
   }
-  20%,100% {
+  20%, 100% {
     opacity: 1;
   }
 }
+
+.fadein04 {
+  animation: slide-skew04 0.9s cubic-bezier(0.25, 1, 0.5, 1) 1 forwards;
+}
+
+@keyframes slide-skew04 {
+  0% {
+    transform: translate(-980px, -500px);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+  20%, 100% {
+    opacity: 1;
+  }
+}
+
+.fadein05 {
+  animation: slide-skew05 0.9s cubic-bezier(0.25, 1, 0.5, 1) 1 forwards;
+}
+
+@keyframes slide-skew05 {
+  0% {
+    transform: translate(520px, 1000px);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+  20%, 100% {
+    opacity: 1;
+  }
+}
+
 /*------------------------------------ Strengths --------------------------------------*/
 
 .Strengths {
@@ -1433,13 +1605,13 @@ footer {
   }
 }
 
-.footer_menu1 div, .footer_menu2 div{
+.footer_menu1 div, .footer_menu2 div {
   margin-right: 0;
   height: 170px;
 }
 
 @media (min-width:770px) {
-  .footer_menu1 div, .footer_menu2 div{
+  .footer_menu1 div, .footer_menu2 div {
     height: 240px;
   }
 }
