--- a/css/index.css
+++ b/css/index.css
@@ -233,6 +233,7 @@ nav.globalMenuSp.active {
     position: relative;
     height: 427px;
   }
+
   .main_mobaile {
     display: none;
   }
@@ -356,6 +357,7 @@ nav.globalMenuSp.active {
   from {
     transform: scale(1.0, 1.0);
   }
+
   to {
     transform: scale(1.12, 1.32);
     opacity: 0;
@@ -368,6 +370,7 @@ nav.globalMenuSp.active {
     width: 686px;
     height: 145px;
   }
+
   .main_mobile, .main_mobile h1, .top_white_mobile, .top_white_universe_mobile {
     display: none;
   }
@@ -452,6 +455,7 @@ nav.globalMenuSp.active {
   from {
     transform: scale(1.0, 1.0);
   }
+
   to {
     transform: scale(1.26, 1.35);
     opacity: 0;
@@ -485,6 +489,7 @@ nav.globalMenuSp.active {
     width: 210px;
     height: 210px;
   }
+
   .top_white_logo_mobile {
     display: none;
   }
@@ -542,6 +547,7 @@ nav.globalMenuSp.active {
     padding: 5px 12px 5px 10px;
     font-size: 12px;
   }
+
   .common_button_mobile {
     display: none;
   }
@@ -644,23 +650,26 @@ nav.globalMenuSp.active {
   top: 20px;
   right: 20px;
 }
- 
+
 .square_btn::before, .square_btn::after {
   content: "";
   position: absolute;
   top: 10%;
   right: 20%;
-  width: 3px; /* 棒の幅（太さ） */
-  height: 27px; /* 棒の高さ */
-  background: #333; /* バツ印の色 */
+  width: 3px;
+  /* 棒の幅（太さ） */
+  height: 27px;
+  /* 棒の高さ */
+  background: #333;
+  /* バツ印の色 */
 }
- 
+
 .square_btn::before {
-  transform: translate(-50%,-50%) rotate(45deg);
+  transform: translate(-50%, -50%) rotate(45deg);
 }
- 
+
 .square_btn::after {
-  transform: translate(-50%,-50%) rotate(-45deg);
+  transform: translate(-50%, -50%) rotate(-45deg);
 }
 
 .top_modal_toppage_box {
@@ -831,9 +840,11 @@ nav.globalMenuSp.active {
     transform: translate(980px, 30px);
     opacity: 0;
   }
+
   100% {
     transform: translate(0, 0);
   }
+
   20%, 100% {
     opacity: 1;
   }
@@ -848,9 +859,11 @@ nav.globalMenuSp.active {
     transform: translate(980px, -500px);
     opacity: 0;
   }
+
   100% {
     transform: translate(0, 0);
   }
+
   20%, 100% {
     opacity: 1;
   }
@@ -865,9 +878,11 @@ nav.globalMenuSp.active {
     transform: translate(-980px, -100px);
     opacity: 0;
   }
+
   100% {
     transform: translate(0, 0);
   }
+
   20%, 100% {
     opacity: 1;
   }
@@ -882,9 +897,11 @@ nav.globalMenuSp.active {
     transform: translate(-980px, -500px);
     opacity: 0;
   }
+
   100% {
     transform: translate(0, 0);
   }
+
   20%, 100% {
     opacity: 1;
   }
@@ -899,9 +916,11 @@ nav.globalMenuSp.active {
     transform: translate(520px, 1000px);
     opacity: 0;
   }
+
   100% {
     transform: translate(0, 0);
   }
+
   20%, 100% {
     opacity: 1;
   }
@@ -912,7 +931,7 @@ nav.globalMenuSp.active {
 .Strengths {
   position: relative;
   width: 100%;
-  height: 1750px;
+  height: 1630px;
   background-color: #E7E7E7;
   text-align: center;
 }
@@ -1369,7 +1388,7 @@ nav.globalMenuSp.active {
   background-color: #0C0C0C;
   color: #FFFFFF;
   width: 100%;
-  height: 1400px;
+  height: 1300px;
 }
 
 @media (min-width:770px) {
@@ -1403,7 +1422,7 @@ nav.globalMenuSp.active {
 .flow h2 {
   text-align: center;
   margin-bottom: 72px;
-  font: normal normal normal 22px "Noto Sans CJK JP", sans-serif!important;
+  font: normal normal normal 22px "Noto Sans CJK JP", sans-serif !important;
   letter-spacing: 4.4px;
 }
 
@@ -1642,8 +1661,14 @@ footer {
 .copy_write {
   text-align: center;
   margin: 35.5px 0 37.5px;
-  font: normal normal bold 15px Noto Sans CJK JP, sans-serif;
+  font: normal normal bold 13px Noto Sans CJK JP, sans-serif;
   color: #4A4A4A;
+}
+
+@media (min-width:540px) {
+  .copy_write {
+    font-size: 15px;
+  }
 }
 
 /*■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ ページ共通 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■*/
@@ -1656,7 +1681,7 @@ a:hover, .check_btn:hover {
   transform: translateY(2px);
 }
 
-.check_btn {
+.check_btn, .case_cat_button {
   cursor: pointer;
 }
 
