--- a/css/service.css
+++ b/css/service.css
@@ -83,7 +83,7 @@
 
 .service_plan {
   width: 100%;
-  height: 1600px;
+  height: 1500px;
   background-color: #E7E7E7;
   padding: 35px 0 0 0;
   margin-bottom: 40px;
@@ -116,7 +116,7 @@
 .service_plan_flex01 {
   display: block;
   justify-content: space-between;
-  width: 95%;
+  width: 90%;
   max-width: 981px;
   margin: 0 auto;
 }
@@ -195,10 +195,11 @@
 }
 
 .service_plan_flex_box01 p, .service_plan_flex_box02 p {
-  width: 100%;
+  width: 90%;
   font-family: "Noto Sans CJK JP", sans-serif;
   font-size: 14px;
   padding: 3px;
+  margin: 0 auto;
 }
 
 @media (min-width:800px) {
@@ -335,7 +336,7 @@
 
 .service_plan_flex02 {
   display: block;
-  width: 95%;
+  width: 90%;
   margin: 0 auto;
 }
 
