--- a/css/service.css
+++ b/css/service.css
@@ -83,7 +83,7 @@
 
 .service_plan {
   width: 100%;
-  height: 1500px;
+  height: 1400px;
   background-color: #E7E7E7;
   padding: 35px 0 0 0;
   margin-bottom: 40px;
@@ -91,7 +91,7 @@
 
 @media (min-width:800px) {
   .service_plan {
-    height: 1038px;
+    height: 958px;
     padding: 86px 0 0 0;
     margin-bottom: 80px;
   }
@@ -131,7 +131,7 @@
 .service_plan_flex_box01 {
   position: relative;
   width: 100%;
-  height: 250px;
+  height: 210px;
   background-color: #fff;
   text-align: center;
   margin: 0 auto 20px;
@@ -141,7 +141,7 @@
   .service_plan_flex_box01 {
     position: relative;
     width: 500px;
-    height: 230px;
+    height: 210px;
     margin: 0 auto 49px;
   }
 }
@@ -151,7 +151,7 @@
     position: relative;
     width: 200px;
     max-width: 306px;
-    height: 346px;
+    height: 286px;
     margin: 0 0 49px;
   }
 }
@@ -211,7 +211,7 @@
 
 @media (min-width:1000px) {
   .service_plan_flex_box01 p, .service_plan_flex_box02 p {
-    width: 273px;
+    width: 248px;
     font-size: 16px;
     padding: 0%;
     letter-spacing: 1.5;
@@ -372,7 +372,7 @@
     position: relative;
     width: 200px;
     max-width: 306px;
-    height: 346px;
+    height: 286px;
     margin: 0 0 49px;
   }
 }
@@ -404,6 +404,9 @@
     font-size: 14px;
     line-height: 32px;
   }
+  .pm_bm_box_module {
+  flex-direction: row;
+}
 }
 
 @media (min-width:800px) {
@@ -427,53 +430,47 @@
 @media (min-width:985px) {
   .pm_bm_box {
     width: 981px;
-    border-bottom: 1px solid #A5A5A5;
-    border-left: 1px solid #A5A5A5;
+    display: flex;
   }
 }
 
 .pm_bm_box_module {
   display: flex;
-  justify-content: space-between;
-  width: 326px;
-  height: 120px;
-  border-top: 1px solid #A5A5A5;
-  border-right: 1px solid #A5A5A5;
-  border-bottom: 1px solid #A5A5A5;
-  border-left: 1px solid #A5A5A5;
   margin: 10px;
+  align-items: center;
+  flex-direction: column;
+}
+.pm_bm_box_module h3 {
+  text-align: left;
+  margin:15px 0 10px 15px; 
+}
+.pm_bm_box_module p {
+  margin:15px 0 10px 15px; 
+  font-size: 14px;
+  color: #2E2E2E;
+  line-height: 30px;
 }
 
 @media (min-width:985px) {
   .pm_bm_box_module {
     display: flex;
-    justify-content: space-between;
-    width: 326px;
-    height: 120px;
-    border-top: 1px solid #A5A5A5;
-    border-right: 1px solid #A5A5A5;
+    flex-direction: column;
+    width: 306px;
     border-bottom: none;
     border-left: none;
-    margin: 0;
+  }
+  .pm_bm_box_module h3 {
+  text-align: center;
+  margin:15px 0 10px; 
+}
+.pm_bm_box_module p {
+  margin:15px 0 10px; 
   }
 }
 
 .pm_bm_box_module img {
-  width: 81px;
-  height: 81px;
-  display: flex;
-  align-items: center;
-  margin: 6% 0 0 4%;
-}
-
-.pm_bm_box_module p {
-  width: 56.88%;
-  margin: 5% auto;
-  display: flex;
-  align-items: center;
-  font-size: 14px;
-  color: #2E2E2E;
-  line-height: 30px;
+  width: 100%;
+  max-width: 340px;
 }
 
 /*------------------------------------ 対応エリア --------------------------------------*/
